--- a/Color game/index.css
+++ b/Color game/index.css
@@ -1,9 +1,16 @@
 body {
-    background-color: #232323;
+    background-color: #909090;
 }
 
 .square {
     width: 30%;
     background: purple;
     padding-bottom: 30%;
+    float: left;
+    margin: 1.66%;
 }
+
+#container {
+    margin: 0 auto;
+    max-width: 600px;
+} 
