--- a/Color game/index.css
+++ b/Color game/index.css
@@ -1,5 +1,7 @@
 body {
     background-color: #232323;
+    margin: 0;
+    font-family: 'Lato', sans-serif;
 }
 
 .square {
@@ -8,15 +10,28 @@ body {
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 25px 0px;
+    transition: 0.6s;
+}
+
+#colorDisplay {
+    font-size: 50px;
 }
 
 #container {
-    margin: 0px auto;
+    margin: 20px auto;
     max-width: 600px;
 }
 
 h1 {
+    text-align: center;
+    font-weight: normal;
+    line-height: 1.1;
+    padding: 20px 0px;
     color: white;
+    background: steelblue;
+    margin: 0;
+    text-transform: uppercase;
 }
 
 #stripe {
@@ -26,6 +41,29 @@ h1 {
     color: black;
 }
 
+#message {
+    display: inline-block;
+    width: 15%;
+}
+
 .select {
-    background-color: aquamarine;
+    color: white;
+    background-color: steelblue;
+}
+
+button {
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    height: 100%;
+    color: steelblue;
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: 0.5s;
+}
+
+button:hover {
+    color: white;
+    background-color: steelblue;
 }
